@@ -1,5 +1,11 @@
 2004-03-27  Murray Cumming  <murrayc@murrayc.com>
 
+	* example/book/: Added menus_and_toolbars example that uses UIManager.
+	The book should probably stop using the other menu and toolbar examples
+	and they should be moved away.
+
+2004-03-27  Murray Cumming  <murrayc@murrayc.com>
+
 	* gtk/src/action.ccg, toggleaction.ccg, radioaction.ccg: 
 	Constructor: Give GTK+ 0 instead of "" for default labels and tooltips,
 	so that the stock ones are used.
